--- a/style.css
+++ b/style.css
@@ -1,26 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-marquee{
-    position: relative;
-    display: inline-block;
-    font-size: 200px;
-    color: 000000;
-    font-family: 'Poppins', sans-serif;
-    behavior: alternate;
-    width: 100%;
-    margin-top: 100px;
-}
+
 header{
     display: inline-block;
-    background-color: grey;
+    background-color: white;
+    border-radius: 1px;
+    box-shadow: 0px 10px 20px #def5fc;
     width: 100%;
-    height: 160px;
+    height: 10%;
     vertical-align: middle;
 }
 body {
-    height: 4000px;
-    width: 100%;
-    display: inline-block;
-    margin: 0%;
+	font-family: 'Poppins', sans-serif;
+	font-weight: bolder;
+	font-size: 90px;
+}
+div.scroll {
+	height: 300px;
+	width: 80%;
+	margin-left: 10%;
+	display: inline-block;
+}
+p.pscroll {
+	white-space: pre;
+}
+button.menubut {
+	display: block;
+	height: 75px;
+	width: 300px;
+	border: 0px;
+	font-size: 22px;
+	font-weight: 500;
+	background-color: white;
+	border-bottom: 3px solid black;
+	margin: 50px;
+	margin-bottom: 50px;
+	margin-top: 100px;
+}
+button.menubut:hover{
+	background-color: black;
+	border-bottom: 3px solid white;
+	color: white;
+	transition: 0.2s;
+}
+div.menu {
+	height: 500px;
+	width: 62%;
+	margin-left: 19%;
+	background-color: white;
+}
+div.col {
+	width: 400px;
+	display: inline-block;
+	height: 400px;
+	margin-left: 35px;
+	margin-right: 35px;
+}
+div.imgcol {
+	display: inline-block;
+	height: 400px;
+	vertical-align: middle;
+	margin-left: 70px;
+	margin-right: 70px;
+}
+img.menustulogo {
+	height: 400px;
+	width: 100%;
+	margin-top: -50px;
 }
 div.img-wrapper {
     display: flex;
@@ -29,6 +74,7 @@ div.img-wrapper {
     justify-content: center;
 }
 img.header-img {
-    height: 100px;
-    vertical-align: 50%;
+    height: 60%;
+    vertical-align: middle;
+    margin-bottom: 20px;
 }
